--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,8 @@ jobs:
           node-version: 18
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
+
       
       - name: Create Firebase Service Account file
         run: echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}" > src/lib/firebase/serviceAccount.json
