--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,8 @@ jobs:
 
       
       - name: Create Firebase Service Account file
-        run: echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}" > src/lib/firebase/serviceAccount.json
+        run: |
+          echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}" > src/lib/firebase/serviceAccount.json
 
 
       - name: Build SvelteKit app
