--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,9 +22,9 @@ jobs:
         run: npm install
 
       
-      - name: Create Firebase Service Account file
+      - name: Create Firebase serviceAccount.json
         run: |
-          echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT_SITE_MASHRIQ_MAGHREB_COMPASS }}" | sed 's/\\n/\n/g' > src/lib/firebase/serviceAccount.json
+          printf "%s" "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}" | sed 's/\\n/\n/g' > src/lib/firebase/serviceAccount.json
 
 
       - name: Build SvelteKit app
