--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Create Firebase serviceAccount.json
         run: |
-          echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT_MASHRIQ_MAGHREB_COMPASS }}" | sed 's/\\n/\n/g' > src/lib/firebase/serviceAccount.json
+          echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT_MASHRIQ_MAGHREB_COMPASS }}" > src/lib/firebase/serviceAccount.json
 
       - name: Build the SvelteKit app
         run: npm run build
