--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
       
       - name: Create Firebase serviceAccount.json
         run: |
-          printf "%s" "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}" | sed 's/\\n/\n/g' > src/lib/firebase/serviceAccount.json
+          printf "%s" "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}" > src/lib/firebase/serviceAccount.json
 
 
       - name: Build SvelteKit app
