--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
       
       - name: Create Firebase serviceAccount.json
         run: |
-          printf "%s" "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}" > src/lib/firebase/serviceAccount.json
+         echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT_MASHRIQ_MAGHREB_COMPASS }}" > src/lib/firebase/serviceAccount.json
 
 
       - name: Build SvelteKit app
