--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,12 @@ jobs:
       
       - name: Create Firebase serviceAccount.json
         run: |
-         echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT_MASHRIQ_MAGHREB_COMPASS }}" > src/lib/firebase/serviceAccount.json
+          echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT_MASHRIQ_MAGHREB_COMPASS }}" > src/lib/firebase/serviceAccount.json
+          echo "=== Contenuto della variabile FIREBASE_SERVICE_ACCOUNT_MASHRIQ_MAGHREB_COMPASS ==="
+          echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT_MASHRIQ_MAGHREB_COMPASS }}"
 
+      - name: Show created serviceAccount.json content
+        run: cat src/lib/firebase/serviceAccount.json
 
       - name: Build SvelteKit app
         run: npm run build
