--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,8 +28,12 @@ jobs:
           echo "=== Contenuto della variabile FIREBASE_SERVICE_ACCOUNT_SITE_MASHRIQ_MAGHREB_COMPASS ==="
           echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT_SITE_MASHRIQ_MAGHREB_COMPASS }}"
 
-      - name: Show created serviceAccount.json content
-        run: cat src/lib/firebase/serviceAccount.json
+      - name: Dump and validate serviceAccount.json
+        run: |
+          echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT_SITE_MASHRIQ_MAGHREB_COMPASS }}" | sed 's/\\n/\n/g' > sa.json
+          cat sa.json
+          jq empty sa.json
+
 
       - name: Build SvelteKit app
         run: npm run build
