--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,28 +26,10 @@ jobs:
           mkdir -p src/lib/firebase
           # Or if using base64:
           echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT_SITE_MASHRIQ_MAGHREB_COMPASS  }}" | base64 --decode > src/lib/firebase/serviceAccount.json
-      - name: Debug VAPID Public Key Length and Content
-        run: |
-              echo "VAPID_PUBLIC_KEY received by build step: '${{ secrets.VAPID_PUBLIC_KEY }}'" # Use quotes to see leading/trailing spaces
-              echo "Length of VAPID_PUBLIC_KEY: ${{ secrets.VAPID_PUBLIC_KEY }}:" $(echo -n "${{ secrets.VAPID_PUBLIC_KEY }}" | wc -c)
-              echo "Checking for problem characters:"
-              echo "${{ secrets.VAPID_PUBLIC_KEY }}" | grep '=' && echo "Found equals sign!" || echo "No equals signs found (good)"
-              echo "${{ secrets.VAPID_PUBLIC_KEY }}" | grep '+' && echo "Found plus sign!" || echo "No plus signs found (good)"
-              echo "${{ secrets.VAPID_PUBLIC_KEY }}" | grep '/' && echo "Found slash sign!" || echo "No slash signs found (good)"
-              # Use od -c to see any invisible characters
-              echo "Raw byte representation:"
-              echo "${{ secrets.VAPID_PUBLIC_KEY }}" | od -c
-        env:
-              VAPID_PUBLIC_KEY: ${{ secrets.VAPID_PUBLIC_KEY }} # Ensure it's passed for the build step too!
+      
 
       - name: Build SvelteKit app
-        run: |
-              echo "VAPID_PUBLIC_KEY received by build step: ${VAPID_PUBLIC_KEY}"
-              # You could even try to validate it in the shell, though not strictly necessary
-               echo "${VAPID_PUBLIC_KEY}" | grep '=' || echo "No equals signs found (good)"
-               echo "${VAPID_PUBLIC_KEY}" | grep '+' || echo "No plus signs found (good)"
-               echo "${VAPID_PUBLIC_KEY}" | grep '/' || echo "No slash signs found (good)"
-              npm run build
+        run: npm run build
         env:
           # Make sure ADMIN_EMAIL is available during the build
           ADMIN_EMAIL: ${{ secrets.ADMIN_EMAIL }}
