--- a/firebase.json
+++ b/firebase.json
@@ -12,5 +12,10 @@
         "destination": "/index.html"
       }
     ]
+  },
+  "functions": {
+    "source": ".", 
+    "runtime": "nodejs22", 
+    "entryPoint": "handler" 
   }
 }
